[project]
name = "python-math-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kaiiy", email = "81578246+kaiiy@users.noreply.github.com" }
]
dependencies = [
    "sympy>=1.12",
    "matplotlib>=3.7.3",
    "numpy>=1.24.4",
    "opencv-python>=4.8.1.78",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
